edit main bottom menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,19 +32,14 @@
     <string name="DntReadyAcc">У вас нету учетной записи? Зарегистрироваться</string>
 
     <string name="PrivacyPolicy">Продолжая, вы принимаете нашу Политику конфиденциальности и условия использования</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_main_dashboard">MainDashboard</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
     <string name="Workout_Name">Название Тренировки</string>
     <string name="Workout_Info">11 Упражнений | 32 Минуты</string>
+    <string name="title_activity_main">MainActivity</string>
 
 
 </resources>
